# EasyERP

./: .env  .env.sample  .flake8  .pre-commit-config.yaml  Dockerfile  MakeFile  README.md  docker-compose.yml  pyproject.toml  run.py  sql dbdiagram.txt  todo.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/admin/controllers/: audit_controller.py
app/admin/routes/: audit_routes.py
app/api/v1/: __init__.py  auth_api.py  estoque_api.py  financeiro_api.py  vendas_api.py
app/core/: __init__.py
app/core/controllers/: auth_controller.py  profile_controller.py  user_controller.py
app/core/models/: permission.py  profile.py  user.py
app/core/routes/: auth_routes.py  profile_routes.py  user_interface_routes.py  user_routes.py
app/core/schemas/: profile_schema.py  user_schema.py
app/core/services/: auth_service.py  user_service.py
app/dashboard/: __init__.py
app/export/: __init__.py  routes.py
app/hooks/: post_user_create.py
app/jobs/: backup_job.py  email_reminder.py  scheduler.py
docs/: api_reference.md  arquitetura.md  casos_de_uso.md  implementacao_anexos.md  implementacao_auditoria.md  implementacao_confirmacao_email.md  implementacao_dashboard.md  implementacao_exportacao.md  implementacao_filtros_avancados.md  implementacao_testes_ci_cd.md  roadmap.md
instance/: config.py
migrations/versions/: 63f782391df1_criação_inicial_das_tabelas.py
requirements/: base.txt  dev.txt  prod.txt
scripts/data/: seed_database.py
scripts/deploy/: cloud_setup.sh
tests/: conftest.py
tests/integration/: test_api_endpoints.py
(+72 files in other folders)
