[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | instance
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["app"]
known_third_party = ["flask", "sqlalchemy", "requests"]
skip = ["migrations", "instance", "venv", ".venv"]
default_section = "THIRDPARTY"

[tool.flake8]
max-line-length = 100
exclude = .git,__pycache__,venv,.venv,migrations,instance
ignore = E203, W503
max-complexity = 10

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
